@@ -19,7 +19,6 @@
 #  NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN
 #  CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 
-FONT_DIR = misc
 BDF2UCS_FONT_FILES = \
 	4x6 \
 	5x7 \
@@ -105,53 +104,85 @@ PCF_FILES = $(FONT_FILES:%=%.pcf.gz)
 TRUNC_BDF_FILES = $(TRUNC_FONT_FILES:%=%t.bdf)
 TRUNC_PCF_FILES = $(TRUNC_FONT_FILES:%=%.pcf.gz)
 
+if ISO8859_1
 ISO8859_1_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-1.bdf)
 ISO8859_1_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-1.pcf.gz)
+endif
 
+if ISO8859_2
 ISO8859_2_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-2.bdf)
 ISO8859_2_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-2.pcf.gz)
+endif
 
+if ISO8859_3
 ISO8859_3_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-3.bdf)
 ISO8859_3_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-3.pcf.gz)
+endif
 
+if ISO8859_4
 ISO8859_4_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-4.bdf)
 ISO8859_4_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-4.pcf.gz)
+endif
 
+if ISO8859_5
 ISO8859_5_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-5.bdf)
 ISO8859_5_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-5.pcf.gz)
+endif
 
+if ISO8859_7
 ISO8859_7_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-7.bdf)
 ISO8859_7_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-7.pcf.gz)
+endif
 
+if ISO8859_8
 ISO8859_8_BDF_FILES = $(BDF2UCS_8_FONT_FILES:%=%-ISO8859-8.bdf)
 ISO8859_8_PCF_FILES = $(BDF2UCS_8_FONT_FILES:%=%-ISO8859-8.pcf.gz)
+endif
 
+if ISO8859_9
 ISO8859_9_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-9.bdf)
 ISO8859_9_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-9.pcf.gz)
+endif
 
+if ISO8859_10
 ISO8859_10_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-10.bdf)
 ISO8859_10_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-10.pcf.gz)
+endif
 
+if ISO8859_11
 ISO8859_11_BDF_FILES = $(BDF2UCS_11_FONT_FILES:%=%-ISO8859-11.bdf)
 ISO8859_11_PCF_FILES = $(BDF2UCS_11_FONT_FILES:%=%-ISO8859-11.pcf.gz)
+endif
 
+if ISO8859_13
 ISO8859_13_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-13.bdf)
 ISO8859_13_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-13.pcf.gz)
+endif
 
+if ISO8859_14
 ISO8859_14_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-14.bdf)
 ISO8859_14_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-14.pcf.gz)
+endif
 
+if ISO8859_15
 ISO8859_15_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-15.bdf)
 ISO8859_15_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-15.pcf.gz)
+endif
 
+if ISO8859_16
 ISO8859_16_BDF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-16.bdf)
 ISO8859_16_PCF_FILES = $(BDF2UCS_FONT_FILES:%=%-ISO8859-16.pcf.gz)
+endif
 
+if KOI8_R
 KOI8_R_BDF_FILES = $(BDF2UCS_KOI8_FONT_FILES:%=%-KOI8-R.bdf)
 KOI8_R_PCF_FILES = $(BDF2UCS_KOI8_FONT_FILES:%=%-KOI8-R.pcf.gz)
+endif
 
+if JISX0201
 JISX0201_BDF_FILES = $(BDF2UCS_JISX0201_FONT_FILES:%=%-JISX0201.1976-0.bdf)
 JISX0201_PCF_FILES = $(BDF2UCS_JISX0201_FONT_FILES:%=%-JISX0201.1976-0.pcf.gz)
+endif
 
 UTIL_DIR = @MAPFILES_PATH@
 
@@ -249,7 +280,7 @@ t.bdf.pcf.gz:
 	@rm -f $@
 	$(BDFTOPCF) -t $^ | gzip > $@
 
-fontdir = $(libdir)/X11/fonts/$(FONT_DIR)
+fontdir = @FONTDIR@
 font_DATA = \
 	$(PCF_FILES) \
 	$(ISO8859_1_PCF_FILES) \
